--- a/app/app.html
+++ b/app/app.html
@@ -16,7 +16,7 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="overflow-x:hidden;"></div>
     <script>
       {
         const scripts = [];
